# solomon

./: .gitignore  BUILD-STATE.md  CHANGELOG.md  LICENSE  README.md  REVIEW-LOG.md  SOUL.md  SPEC.md  install.sh  plugin.yaml  pyproject.toml
.github/workflows/: tests.yml
corpus/: README.md  schema.md
docs/: ARCHITECTURE.md  NEXT-SESSION-CHAT-ONBOARDING.md  PHASES.md  REPORT-CORPUS.md  REPORT-INTERVIEW.md  REPORT-PIPELINE.md
foundation/: 00-industry.yaml  01-belief-system.yaml  02-why.yaml  03-principles.yaml  04-ideal-outcomes.yaml  05-non-negotiables.yaml  06-scopes.yaml
foundation/_schemas/: 00-industry.schema.json  01-belief-system.schema.json  02-why.schema.json  03-principles.schema.json  04-ideal-outcomes.schema.json  05-non-negotiables.schema.json  06-taxonomy.schema.json
references/: autonomy-spectrum.md  eliza-listening.md  interview-architecture.md  orchestrator-pipeline.md  portability.md  retrieval-5-lane.md  sleep-cycle-jobs.md
solomon/: __init__.py  adapter.py  checkin.py  cli.py  conductor.py  daily.py  doctor.py  hooks.py  inbound.py  ingest.py  logs.py  plugin.py  plugin.yaml  profile.py  session_state.py  slash.py  tools.py  weekly.py
solomon/actions/: __init__.py
solomon/audit_gate/: __init__.py  audit.py
solomon/autonomy/: __init__.py  ladder.py
solomon/capture/: __init__.py  raw_event.py
solomon/classify/: __init__.py  classifier.py
solomon/corpus/: __init__.py  chunk.py  embed.py  extract.py  forget.py  ingest.py  lint.py  llm.py  llm_passes.py  manifest.py  prompts.py  route.py  rules.py  schema_config.py  wiki.py
solomon/ingestion/: __init__.py  budget_tracker.py  chunker.py  classifier.py  cross_referencer.py  embedder.py  extractor.py  heuristic_miner.py  review_queue.py  sensitivity_filter.py  upload_handler.py
solomon/learning/: __init__.py
solomon/memory/: __init__.py  retrieval.py  working.py
solomon/mentoring/: __init__.py  review.py
solomon/non_negotiables/: __init__.py  check.py
solomon/onboarding/: __init__.py  session_runner.py
solomon/onboarding/curriculum/: sessions.yaml
solomon/onboarding/interview/: __init__.py  contradiction.py  coverage.py  engine.py  extraction.py  redact.py  vocabulary.py
solomon/onboarding/probe_library/: README.md  _generic.yaml  belief_system.yaml  ideal_outcomes.yaml  industry.yaml  non_negotiables.yaml  principles.yaml  scopes.yaml  why.yaml
solomon/onboarding_v2/: __init__.py  commands.py  session.py  tools.py
solomon/pipeline/: __init__.py  _helpers.py  runner.py  stage_action.py  stage_audit.py  stage_capture.py  stage_classification.py  stage_hard_rule.py  stage_owner_state.py  stage_retrieval.py  stage_salience.py  stage_system1.py  stage_system2.py
solomon/predictions/: __init__.py  checkpoints.py  counterfactuals.py
solomon/private/: __init__.py  mode.py
solomon/reasoning/: __init__.py  divergence.py  llm.py  system_1.py  system_2.py
solomon/salience/: __init__.py  scorer.py
solomon/skills/: solomon-compress.md  solomon-default.md  solomon-ingest.md  solomon-interview.md
solomon/sleep/: __init__.py  job_10_corpus_backup.py  job_11_embed_pending.py  job_12_yaml_reconcile.py  job_1_hindsight.py  job_2_archival.py  job_3_surprise_replay.py  job_4_stress_test.py  job_5_conflict.py  job_6_working_memory.py  job_7_autonomy.py  job_8_mentoring_scheduler.py  job_9_corpus_lint.py  runner.py
solomon/storage/: __init__.py  decisions.py  pool.py  schema.sql  schema_postgres.sql
solomon/tools/: __init__.py
solomon/workers/: __init__.py
solomon/workers/corpus_inbox_watcher/: __init__.py  __main__.py
solomon/workers/plaud_ingest/: __init__.py
tests/: __init__.py  _pipeline_helpers.py  conftest.py  test_adapter.py  test_autonomy_ladder.py  test_budget_tracker.py  test_checkin.py  test_chunker.py  test_cli.py  test_conductor_pipeline.py  test_corpus_chunk.py  test_corpus_cli.py  test_corpus_embed.py  test_corpus_extract.py  test_corpus_forget.py  test_corpus_inbox_watcher.py  test_corpus_ingest.py  test_corpus_lint.py  test_corpus_llm_passes.py  test_corpus_manifest.py  test_corpus_rules.py  test_corpus_wiki.py  test_coverage.py  test_daily.py  test_decisions.py  test_divergence.py  test_doctor.py  test_home_resolution.py  test_hooks.py  test_inbound.py  test_ingest.py  test_interview_engine.py  test_job_10_corpus_backup.py  test_job_11_embed_pending.py  test_job_12_yaml_reconcile.py  test_job_9_corpus_lint.py  test_logs.py  test_mentoring_cli.py  test_mentoring_review.py  test_non_negotiables.py  (+21 more)
tests/integration/: test_e2e_onboarding.py
