[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solomon-brain"
version = "0.2.0"
description = "An AI chief of staff that learns how you make decisions, then gradually makes them for you. Hermes plugin."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Solomon Project"}]
requires-python = ">=3.10"
dependencies = [
    # Postgres + pgvector
    "psycopg[binary,pool]>=3.1",
    "pgvector>=0.2.5",
    # YAML for foundation files
    "PyYAML>=6.0",
    # CLI / installer
    "click>=8.1",
    "rich>=13.0",
    # Web app for owner review UI
    "fastapi>=0.110",
    "uvicorn>=0.27",
    # HTTP for webhook adapters and LLM calls
    "httpx>=0.27",
    # Git for foundation file versioning
    "GitPython>=3.1",
    # JSON-logic for Stage 4 hard-rule non-negotiables (Python-3 maintained fork).
    # Imports as `json_logic`; canonical Drive reference uses the same import.
    "json-logic-qubit>=0.9",
    # ULID for events.event_id
    "ulid-py>=1.1",
    # Corpus pipeline — file-type extractors (required, not optional).
    "pypdf>=4.0",
    "python-docx>=1.1",
    "python-pptx>=0.6",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    # Corpus inbox watcher + Plaud IMAP listener.
    "watchdog>=4.0",
    "imapclient>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
    "mypy>=1.8",
]
# Local embeddings (the default). Pulls sentence-transformers + torch (~1GB).
# If you opt into SOLOMON_EMBEDDING_PROVIDER=openai, you don't need this.
local-embeddings = [
    "sentence-transformers>=2.6",
]
# spaCy NER for the interview vocabulary Pass 1 (NP/VP chunks). Pure
# Python and the en_core_web_sm model are both small (~50MB total).
# Without this extra, vocabulary capture falls back to LLM-only.
interview-vocab = [
    "spacy>=3.7",
]
# Everything: dev tools + local embeddings + interview vocab.
all = [
    "solomon-brain[dev,local-embeddings,interview-vocab]",
]

[project.scripts]
solomon = "solomon.cli:main"

[project.entry-points."hermes_agent.plugins"]
solomon = "solomon.plugin:register"

[project.urls]
Homepage = "https://github.com/YOUR_GH/solomon"
Documentation = "https://github.com/YOUR_GH/solomon/tree/main/docs"

[tool.setuptools.packages.find]
include = ["solomon*"]

[tool.setuptools.package-data]
solomon = ["storage/schema.sql", "storage/migrations/*.sql", "onboarding/curriculum/*.yaml", "templates/**/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
